--- a/mcarbonPortal/src/app/dashboard/dashboard.component.html
+++ b/mcarbonPortal/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="accounts.isDisplay">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="checkAccount()">
         <div class="card card-stats">
           <div class="card-header card-header-warning card-header-icon">
             <div class="card-icon">
@@ -22,7 +22,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="users.isDisplay">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="checkUser()">
         <div class="card card-stats">
           <div class="card-header card-header-success card-header-icon">
             <div class="card-icon">
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="sessions.isDisplay">
+      <div class="col-lg-3 col-md-6 col-sm-6" *ngIf="checkSession()">
         <div class="card card-stats">
           <div class="card-header card-header-danger card-header-icon">
             <div class="card-icon">
@@ -72,9 +72,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4" *ngIf="checkAccount()">
         <div class="card card-chart">
-          <div class="card-header card-header-success">
+          <div class="card-header card-header-warning">
             <div class="ct-chart" id="dailySalesChart"></div>
           </div>
           <div class="card-body">
@@ -93,9 +93,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" *ngIf="checkUser()">
         <div class="card card-chart">
-          <div class="card-header card-header-warning">
+          <div class="card-header card-header-success">
             <div class="ct-chart" id="websiteViewsChart"></div>
           </div>
           <div class="card-body">
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4" *ngIf="checkSession()">
         <div class="card card-chart">
           <div class="card-header card-header-danger">
             <div class="ct-chart" id="completedTasksChart"></div>
