Audio/video enable disable fix

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -35,8 +35,8 @@
 	[minimal]="false"
 	[participantName]="participantNameValue"
 	[prejoin]="false"
-	[videoMuted]="true"
-	[audioMuted]="true"
+	[videoMuted]="isVideoMuted"
+	[audioMuted]="isAudioMuted"
 	[toolbarVideoControlButton]="false"
 	[broadcastingActivityBroadcastingError]="error"
 	[toolbarPublishVideoButton]="preRecorded"
