Auto full screen implementation

--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -53,6 +53,8 @@
 	[toolbarDisplayLogoValue]="logo"
 	[floatingLayout]="floatingLayout"
 	[floatingLayoutType]="layoutNumber"
+	[toolbarScreenShareWithAudio]="isScreenShareWithAudio"
+	[toolbarAutoFullScreen]="isAutoFullScreen"
 >
 </ov-videoconference>
 
