--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -55,6 +55,7 @@
 	[floatingLayoutType]="layoutNumber"
 	[toolbarScreenShareWithAudio]="isScreenShareWithAudio"
 	[toolbarAutoFullScreen]="isAutoFullScreen"
+	[toolbarSupervisorButton]="true"
 >
 </ov-videoconference>
 
