--- a/mcarbonPortal/src/app/create-feature-dialog/create-feature-dialog.component.html
+++ b/mcarbonPortal/src/app/create-feature-dialog/create-feature-dialog.component.html
@@ -7,77 +7,95 @@
       </button>
     </h4>
   </div>
-  <div class="card-body">
-    <div class="container" [formGroup]="featureForm" *ngIf="featureForm">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-12 col-custom">
-              <mat-form-field appearance="outline">
-                <mat-label>Feature ID</mat-label>
-                <input
-                  matInput
-                  type="number"
-                  placeholder="Feature ID"
-                  formControlName="featureId"
-                />
-              </mat-form-field>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="row">
-            <div class="col-12 col-custom">
-              <mat-form-field appearance="outline">
-                <mat-label>Feature Name</mat-label>
-                <input
-                  matInput
-                  type="text"
-                  placeholder="Feature Name"
-                  formControlName="name"
-                />
-              </mat-form-field>
-            </div>
+  <div class="container" [formGroup]="featureForm" *ngIf="featureForm">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-12 col-custom">
+            <mat-form-field appearance="outline">
+              <mat-label>Feature ID</mat-label>
+              <input
+                matInput
+                type="number"
+                placeholder="Feature ID"
+                formControlName="featureId"
+              />
+            </mat-form-field>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12 col-custom" id="metaList">
-          <div class="row">
-            <div class="col-11 col-custom">
-              <h4>Add Meta List</h4>
-            </div>
-            <div class="col-1">
-              <mat-icon (click)="addMeta()">add</mat-icon>
-            </div>
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-12 col-custom">
+            <mat-form-field appearance="outline">
+              <mat-label>Feature Name</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Feature Name"
+                formControlName="name"
+              />
+            </mat-form-field>
           </div>
-          <div class="row">
-            <div class="col-4 col-custom">
-              <mat-form-field appearance="outline">
-                <mat-label>Meta Name</mat-label>
-                <input matInput type="text" placeholder="Meta Name" />
-              </mat-form-field>
-            </div>
-            <div class="col-4 col-custom">
-              <mat-form-field appearance="outline">
-                <mat-label>Meta Type</mat-label>
-                <mat-select>
-                  <mat-option
-                    *ngFor="let metaType of metaTypes"
-                    [value]="metaType"
-                  >
-                    {{ metaType }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-            <div class="col-3 col-custom">
-              <mat-form-field appearance="outline">
-                <mat-label>Meta Key</mat-label>
-                <input matInput type="text" placeholder="Meta Key" />
-              </mat-form-field>
-            </div>
-            <div class="col-1">x</div>
+        </div>
+      </div>
+    </div>
+    <div class="row" formArrayName="metaList">
+      <div class="col-md-12 col-custom" id="metaList">
+        <div class="row">
+          <div class="col-11">
+            <h4>Add Meta List</h4>
+          </div>
+          <div class="col-1">
+            <mat-icon (click)="addMeta()">add</mat-icon>
+          </div>
+        </div>
+        <div
+          class="row"
+          *ngFor="
+            let control of featureForm.controls.metaList.controls;
+            let i = index
+          "
+          [formGroupName]="i"
+        >
+          <div class="col-3">
+            <mat-form-field appearance="outline">
+              <mat-label>Meta Type</mat-label>
+              <mat-select formControlName="type">
+                <mat-option
+                  *ngFor="let metaType of metaTypes"
+                  [value]="metaType"
+                >
+                  {{ metaType }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-4">
+            <mat-form-field appearance="outline">
+              <mat-label>Meta Name {{ i }}</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="Meta Name"
+                formControlName="name"
+              />
+            </mat-form-field>
+          </div>
+
+          <div class="col-4">
+            <mat-form-field appearance="outline">
+              <mat-label>Meta Key</mat-label>
+              <input
+                matInput
+                type="text"
+                placeholder="meta_key"
+                formControlName="key"
+              />
+            </mat-form-field>
+          </div>
+          <div class="col-1">
+            <mat-icon (click)="removeMeta(i)">close</mat-icon>
           </div>
         </div>
       </div>
