--- a/mcarbonPortal/src/app/components/navbar/navbar.component.html
+++ b/mcarbonPortal/src/app/components/navbar/navbar.component.html
@@ -71,10 +71,14 @@
             <i class="material-icons">person</i>
             <p>
               <span class="d-lg-none d-md-block">Account</span>
-            </p> </a
-          >
+            </p>
+          </a>
           <mat-menu #menu="matMenu" xPosition="before">
-            <button class="btn-action" mat-menu-item (click)="goTo('app/user_profile')">
+            <button
+              class="btn-action"
+              mat-menu-item
+              (click)="goTo('app/user_profile')"
+            >
               <span>Profile</span>
             </button>
             <button class="btn-action" mat-menu-item (click)="logout()">
