--- a/mcarbonPortal/src/app/components/sidebar/sidebar.component.css
+++ b/mcarbonPortal/src/app/components/sidebar/sidebar.component.css
@@ -1,7 +1,17 @@
-.logo::after{
+/* .logo::after{
     height: 0px !important;
 }
 
 .logo{
     margin-bottom:30px !important
+} */
+.logo-image {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.img-photo {
+  width: inherit;
 }
