--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
@@ -79,6 +79,13 @@ mat-tab-group {
   border-color: #17d1be !important;
 }
 
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+  background-color: #17d1be !important;
+}
+::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  background-color: #bbfff8 !important;
+}
+
 .container {
   padding-top: 10px;
 }
