--- a/mcarbonPortal/src/app/components/navbar/navbar.component.html
+++ b/mcarbonPortal/src/app/components/navbar/navbar.component.html
@@ -67,7 +67,7 @@
             </button>
           </mat-menu> -->
 
-          <a class="nav-link" [matMenuTriggerFor]="menu">
+          <a class="nav-link" [matMenuTriggerFor]="menu" id="user-menu">
             <i class="material-icons">person</i>
             <p>
               <span class="d-lg-none d-md-block">Account</span>
@@ -75,13 +75,17 @@
           </a>
           <mat-menu #menu="matMenu" xPosition="before">
             <button
-              class="btn-action"
+              class="btn-profile btn-action"
               mat-menu-item
               (click)="goTo('app/user_profile')"
             >
               <span>Profile</span>
             </button>
-            <button class="btn-action" mat-menu-item (click)="logout()">
+            <button
+              class="btn-action btn-logout"
+              mat-menu-item
+              (click)="logout()"
+            >
               <span>Log Out</span>
             </button>
           </mat-menu>
