--- a/mcarbonPortal/src/app/login/login.component.html
+++ b/mcarbonPortal/src/app/login/login.component.html
@@ -31,7 +31,7 @@
               <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
           </mat-form-field>
-          <button mat-raised-button class="btn login-button" (click)="login()">
+          <button id="login-btn" mat-raised-button class="btn login-button" (click)="login()">
             Login
           </button>
           <div class="row">
