--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -56,6 +56,7 @@
 	[toolbarScreenShareWithAudio]="isScreenShareWithAudio"
 	[toolbarAutoFullScreen]="isAutoFullScreen"
 	[toolbarSupervisorButton]="true"
+	[toolbarQuestionPanelButton]="isquestionpanel"
 >
 </ov-videoconference>
 
